# digital-twin

./: .gitignore  CMakeLists.txt  README.md  nanoipc.hpp  nanoipc_client.hpp  nanoipc_read_buffer.hpp  nanoipc_reader.hpp  nanoipc_server.hpp  nanoipc_utils.cpp  nanoipc_utils.hpp  nanoipc_writer.hpp
.devcontainer/: devcontainer.json
.github/skills/code-docs/: SKILL.md
apps/linux_uart_json_client/: README.md
docker/: dev.dockerfile
example/: README.md  task.md
example/api/: CMakeLists.txt  example.proto  example_api.hpp  example_request.hpp  example_request_reader.hpp  example_request_writer.hpp  example_response.hpp  example_response_reader.hpp  example_response_writer.hpp
example/example_client/: CMakeLists.txt
example/example_client/src/: example_client.cpp
example/example_server/: CMakeLists.txt  STM32F103C8Tx_FLASH.ld  avr-toolchain.cmake  stm32-bluepill-toolchain.cmake
example/example_server/src/: example_server.cpp  startup_stm32f103.c  uart_read_buffer.hpp
example/proto/: CMakeLists.txt  example_api.hpp  example_request_reader.hpp  example_request_writer.hpp
frame/: CMakeLists.txt
frame/include/: cobs_frame_reader.hpp  cobs_frame_writer.hpp  frame_writer.hpp  ring_buffer.hpp
frame/linux/: CMakeLists.txt
frame/linux/include/: linux_uart_cobs_frame_writer.hpp
frame/linux/src/: linux_uart_json_client.cpp
frame/tests/: CMakeLists.txt
frame/tests/src/: ut_cobs_frame.cpp  ut_frame.cpp  ut_frame_reader.cpp
include/: reader.hpp  writer.hpp
message/include/: pb_message_writer.hpp
message/tests/: CMakeLists.txt
message/tests/src/: ut_pb_message.cpp
nanoipc_utils/: nanoipc_utils.cpp
nanopb_utils/: nanopb_serializer.hpp
nanopb_utils/tests/: CMakeLists.txt
nanopb_utils/tests/src/: ut_nanopb_serializer.cpp
tests/: CMakeLists.txt
tests/src/: ut_nanoipc_reader.cpp  ut_nanoipc_tests.cpp  ut_nanoipc_writer.cpp
utils/: CMakeLists.txt
utils/include/: uart_connection.hpp
utils/src/: uart_connection.cpp
utils/tests/: CMakeLists.txt
utils/tests/src/: ut_uart_connection.cpp
